k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: milyfe
  labels:
    app.kubernetes.io/part-of: milyfe-brain
